# contest-template

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Readme.md  appveyor.yml  build.sh  build_dev.sh  vm_build.sh
cmake/: contest.cmake  cotire.cmake  shared_plog_init.cpp.in  shared_plog_init.h.in  ucm.cmake
contest/: CMakeLists.txt
contest/dummy_exe/: CMakeLists.txt
contest/dummy_exe/source/: main.cpp  stdafx.h
contest/dummy_lib/: CMakeLists.txt
contest/dummy_lib/include/dummy/: dummy.h
contest/dummy_lib/source/: dummy.cpp
contest/logger/: CMakeLists.txt
contest/logger/include/logger/: logger.hpp
contest/logger/source/: logger.cpp
libs/: CMakeLists.txt
libs/app_utils/: CMakeLists.txt
libs/app_utils/include/app_utils/: crash_tracer.h  logger.h
libs/app_utils/source/: crash_tracer.cpp  logger.cpp
libs/baseapp/: CMakeLists.txt
libs/baseapp/include/baseapp/: application.h  crash_tracer.h
libs/baseapp/source/: application.cpp  crash_tracer.cpp
libs/ui_lib/: CMakeLists.txt
libs/ui_lib/include/ui_lib/: font.h  imgui_visitor.h  ui_frame.h  world.h  world_parameters.h
libs/ui_lib/source/: helpers.cpp  imgui_visitor.cpp  stdafx.h  ui_frame.cpp
templates/: CMakeLists.txt
templates/dll_template/: CMakeLists.txt
templates/dll_template/include/dll_template/: dummy_dll.h
templates/dll_template/source/: dummy.cpp
templates/exe_template/: CMakeLists.txt
templates/exe_template/source/: main.cpp  stdafx.h
templates/lib_template/: CMakeLists.txt
templates/lib_template/include/lib_template/: dummy.h
templates/lib_template/source/: dummy.cpp
templates/ui_exe_template/: CMakeLists.txt
templates/ui_exe_template/source/: main.cpp  stdafx.h
templates/ui_lib/: CMakeLists.txt
templates/ui_lib/include/ui_lib/: helpers.h  ui_container.h  ui_parameters_wrappers.h
templates/ui_lib/source/: imgui_visitor.cpp  main.cpp  noc_file_dialog.cpp  noc_file_dialog.h  stdafx.h
tests/: CMakeLists.txt
tests/catch_main_lib/: CMakeLists.txt
tests/example/: CMakeLists.txt
tests/example/source/: main.cpp
tests/example_catch/: CMakeLists.txt
tests/example_catch/source/: main.cpp  some_test.cpp
tests/example_gtest/: CMakeLists.txt
tests/example_gtest/source/: main.cpp  some_test.cpp
tests/gtest_main_lib/: CMakeLists.txt
